CSS fixes.
Sunday no longer shows in a thin column.
Padding fix for grids in Edge / Firefox.
Remove horizontal scrollbar in IE.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -262,12 +262,6 @@ body {
         .night {
             grid-row: 5;
         }
-        .dayone {
-            grid-column: 2;
-        }
-        .daytwo {
-            grid-column: 3;
-        }
         .double {
             grid-row-end: span 2;
         }
@@ -497,6 +491,10 @@ body {
             }
         }
         #schedule {
+            &::after {
+                content: '';
+                height: 90px;
+            }
             width: calc(100% - 100px);
             max-width: calc(100% - 100px);
             height: auto;
@@ -504,8 +502,8 @@ body {
             grid-template-rows: 55px repeat(4, auto);
             max-height: calc(100vh - 65px - 25px - 22px);
             box-sizing: border-box;
-            padding-bottom: 91px;
-            overflow: scroll;
+            overflow-y: scroll;
+            overflow-x: hidden;
             .time {
                 min-height: calc((100vh - 100px) / 4);
             }
